# FunctionalProgramming_Haskell

./: Snake.hs  rits.hs  snakesmall.hs  valentijn.hs
Slides/: ExtraInfoBijSlides.rar
Slides/Oplossingen/: Week10.lhs  Week2.lhs  Week3.lhs  Week4.lhs  Week5.lhs  Week61Identity.lhs  Week62Error.lhs  Week63State.lhs  Week64Amb.lhs  oplossingen.lhs
cogs2/: README.md  cogs.cabal
cogs2/src/: Constants.hs  Datatypes.hs  Display.hs  EitherParser.hs  EitherT.hs  Functions.hs  Main.hs  Parser.hs  Test.hs
cogs2/tests/: invaild-02.txt  invalid-01.txt  solved-01.txt  solved-02.txt  unsolved-01.txt  unsolved-02.txt  unsolved-03.txt
lhs-solutions-2018-2019-master/: LICENSE  lhs-solutions.cabal  stack.yaml
lhs-solutions-2018-2019-master/src/: Minimal.hs  ReactiveMBot.hs  StopBot.hs  Week1.lhs  Week10Opgave.lhs  Week11Opgave.lhs  Week3.lhs  Week4.lhs  Week5.lhs  Week61Identity.lhs  Week62Error.lhs  Week63State.lhs  Week64Amb.lhs  Week8.lhs  Week9.lhs
pipes/: README.md  pipes.cabal
sausage-roll/: README.md
sausage-roll/src/: Main.hs  Test.hs
sausage-roll/tests/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out
snake/: snake.cabal  snakesmall.hs
snake/src/: Main-DESKTOP-6LVUNAT.hs  Main.hs
tetris/: tetris.cabal
tetris/src/: Main-DESKTOP-6LVUNAT.hs  Main.hs
week11/: ChangeLog.md  package.yaml  week11.cabal
week11/src/: Main.hs
