name:                lhs-solutions
version:             0.1.0.0
synopsis:            Literate Haskell solutions to the exercises of 2018-2019
homepage:            https://github.ugent.be/functioneel-programmeren/lhs-solutions#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Van der Jeugt
maintainer:          felix.vanderjeugt@ugent.be
copyright:           2018 Felix Van der Jeugt
category:            Education
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:     base >=4.7 && <5
                   , transformers >= 0.5 && < 0.6
                   , stm >= 2.4 && < 2.6
                   , mtl >= 2.2 && < 2.3
                   , MBot >= 0.2 && < 0.3
                   , gloss >= 1.12 && < 1.13
                   , reactive-banana >= 1.1 && < 1.3
  exposed-modules:     Week1
                     , Week2
                     , Week3
                     , Week4
                     , Week5
                     , Week61Identity
                     , Week62Error
                     , Week63State
                     , Week64Amb
                     , Week8
                     , Week9
                     , Week10Opgave
                     , ReactiveMBot
                     , Week11Opgave

executable minimal
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , MBot >= 0.2 && < 0.3
  main-is:             Minimal.hs

executable stop-mbot
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , MBot >= 0.2 && < 0.3
  main-is:             StopBot.hs
