name:                pipes
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable pipes
  hs-source-dirs:    src
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.8 && < 5
                   , gloss >= 1.11 && < 2
  other-modules:     Constants
                   , Types
                   , Display
                   , Functions
                   , ParserBoard
                   , ParserInit

executable pipes-test
  hs-source-dirs:    src
  main-is:           Test.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.8 && < 5
                   , directory >= 1.3 && < 1.4
                   , filepath >= 1.4.2 && < 1.5
                   , process >= 1.6 && < 1.7
                   , gloss >= 1.11 && < 2
  other-modules:     Constants
                   , Types
                   , Display
                   , Functions
                   , ParserBoard
                   , ParserInit
